--- a/.xbindkeysrc
+++ b/.xbindkeysrc
@@ -61,7 +61,7 @@
     Shift+Mod4 + s 
 
 #Print screen (window)
-"(maim -i `xdotool getactivewindow` && notify-send "Screenshot captured" "Copied screenshot of \"$(xdotool getactivewindow getwindowname)\" the clipboard") | xclip -selection clipboard -t image/png"
+"(maim -i `xdotool getactivewindow` && notify-send "Screenshot captured" "Copied screenshot of \"$(xdotool getactivewindow getwindowname)\" to the clipboard") | xclip -selection clipboard -t image/png"
     m:0x1 + c:107
     Shift + Print 
 
